--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "book-server",
+  "name": "ketabot-server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
     "express": "^4.15.4",
+    "fs": "0.0.1-security",
     "hashmap": "^2.3.0",
     "mongoosastic": "^4.3.0",
     "mongoose": "^5.4.1",
