--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "mongoosastic": "^4.3.0",
     "mongoose": "^5.4.1",
     "multer": "^1.3.0",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "swagger-ui-express": "latest"
+  },
+  "devDependencies": {
+    "swagger-ui-express": "^4.0.2"
   }
 }
