--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "mongoose": "^5.4.1",
     "multer": "^1.3.0",
     "redis": "^2.8.0",
-    "swagger-ui-express": "latest"
-  },
-  "devDependencies": {
-    "swagger-ui-express": "^4.0.2"
+    "swagger-ui-express": "^4.0.2",
+    "mocha": "6.0.0-1"
   }
 }
