--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "express": "^4.15.4",
     "fs": "0.0.1-security",
     "hashmap": "^2.3.0",
+    "mocha": "6.0.0-1",
     "mongoosastic": "^4.3.0",
     "mongoose": "^5.4.1",
     "multer": "^1.3.0",
     "redis": "^2.8.0",
-    "swagger-ui-express": "^4.0.2",
-    "mocha": "6.0.0-1"
+    "swagger-ui-express": "^4.0.2"
   }
 }
