Add sentry to project

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sentry/node": "^4.5.0",
     "body-parser": "^1.18.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
