--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "multer": "^1.3.0",
     "redis": "^2.8.0",
     "swagger-ui-express": "^4.0.2"
+  },
+  "devDependencies": {
+    "casbin": "^2.0.0"
   }
 }
