--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@sentry/node": "^4.5.0",
+    "bluebird": "latest",
     "body-parser": "^1.18.0",
+    "configs": "^1.0.3",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
     "express": "^4.15.4",
@@ -23,9 +25,11 @@
     "mongoose": "^5.4.1",
     "multer": "^1.3.0",
     "redis": "^2.8.0",
-    "swagger-ui-express": "^4.0.2"
+    "swagger-ui-express": "^4.0.2",
+    "casbin": "^2.0.0",
+    "kavenegar": "^1.1.4"
   },
   "devDependencies": {
-    "casbin": "^2.0.0"
+
   }
 }
