--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sentry/node": "^4.5.0",
     "bluebird": "latest",
     "body-parser": "^1.18.0",
+    "casbin": "^2.0.0",
     "configs": "^1.0.3",
     "cookie-parser": "^1.4.3",
     "dotenv": "^6.2.0",
@@ -20,16 +21,13 @@
     "fs": "0.0.1-security",
     "hashmap": "^2.3.0",
     "jsonwebtoken": "^8.4.0",
+    "kavenegar": "^1.1.4",
     "mocha": "6.0.0-1",
     "mongoosastic": "^4.3.0",
     "mongoose": "^5.4.1",
     "multer": "^1.3.0",
     "redis": "^2.8.0",
-    "swagger-ui-express": "^4.0.2",
-    "casbin": "^2.0.0",
-    "kavenegar": "^1.1.4"
+    "swagger-ui-express": "^4.0.2"
   },
-  "devDependencies": {
-
-  }
+  "devDependencies": {}
 }
