--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ketabot-server",
   "version": "1.0.6",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
